[project]
name = "gaphas"
version = "5.1.0"
description="Gaphas is a GTK diagramming widget"
authors = [
    { name = "Arjan Molenaar", email = "gaphor@gmail.com" },
    { name = "Dan Yeaw", email = "dan@yeaw.me" },
]

readme = "README.md"

keywords = ["gtk", "diagram", "gaphas"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

requires-python = ">=3.9,<4.0"

dependencies = [
    "PyGObject>=3.50",
    "pycairo>=1.20.0",
]

[project.urls]
homepage = "https://gaphas.readthedocs.io/"
repository = "https://github.com/gaphor/gaphas"
documentation = "https://gaphas.readthedocs.io/"

[tool.poetry]
requires-poetry = ">=2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3"
pytest-cov = ">=5"
pytest-archon = ">=0.0.6"
pytest-asyncio = ">=0.23.8"

[tool.poetry.group.docs]
optional=true

[tool.poetry.group.docs.dependencies]
sphinx = ">=4.3,<8.0"
furo = ">=2022,<2025"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

[tool.coverage.run]
source = ["gaphas"]

[tool.mypy]
python_version = 3.9
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
check_untyped_defs = true
strict_optional = true
disallow_any_explicit = true
show_error_codes = true
ignore_missing_imports=true
namespace_packages = true
explicit_package_bases = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "cairo",
    "gi.*",
    "hotshot.*",
]
ignore_missing_imports = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "gaphas.*"
disallow_incomplete_defs = true

[tool.ruff]
exclude = [
    ".venv",
    "dist",
    "__init__.py",
]
line-length = 88
[tool.ruff.lint]
ignore = ["E501", "B905", "B019"]
select = [
    "B",
    "B9",
    "C",
    "E",
    "F",
    "W",
]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.codespell]
skip = 'README.md, CODE_OF_CONDUCT.md'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
